# SOA-for-semi-conductor-devices

./: .gitignore  CHANGELOG.md  DEVICE_GROUPED_EXTRACTION.md  Makefile  POETRY_SETUP.md  PROJECT_INDEX.md  QUICK_START.md  README.md  SOA_DSL_Proposal.md  automation_benefits_analysis.py  complete_extraction_log.txt  complete_soa_rules.json  conversion_log.txt  detailed_analysis.py  device_grouped_extractor.py  device_summary.txt  enhanced_extraction_summary.txt  enhanced_extractor.py  extraction_summary.txt  final_results_generator.py  implementation_architecture.py  precise_analysis.py  pyproject.toml  simple_device_mapping.json  soa_dsl_specification.py  soa_rules.yaml  soa_toolchain_architecture.json
.devcontainer/: Dockerfile  devcontainer.json
assets/: README.md
config/: README.md
data/: README.md
data/extracted/: device_grouped_soa_rules.json  soa_automation_analysis.json  soa_rules.json
data/mappings/: pattern_mapping.json
data/results/: enhanced_device_grouped_rules.json  improved_device_grouped_rules.json  organization_summary.json  project_file_analysis.json  project_organization_plan.json  soa_dsl_specification.json  workflow_analysis.json
docs/: README.md  README_old.md
docs/proposal/: SOA_DSL_Presentation.md
docs/reports/: COMPLETE_EXTRACTION_REPORT.md  FINAL_SUMMARY.md  final_extraction_report.md  improved_extraction_summary.txt
examples/: README.md
presentation_materials/: CONVERSION_INSTRUCTIONS.md  Detailed_Proposal.html  Executive_Presentation.html  Executive_Summary.html  Executive_Summary.md  Extracted_SOA_Rules.json  Manager_Briefing_Package.md  PRESENTATION_GUIDE.md  PowerPoint_Slides.txt  Project_Navigation.html  Quick_Start_Guide.html  README_START_HERE.md
scripts/: README.md
src/: README.md
src/soa_rules/: loader.py  (+5 more)
tests/: README.md  __init__.py
(+27 files in other folders)
